k8s/db/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: pet-clinic-db
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - port: 3306
